# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

group("unittest") {
  testonly = true
  deps = [
    "client:one_way_tls_socket_certchain_unittest",
    "client:one_way_tls_socket_unittest",
    "client:secure_data_unittest",
    "client:socket_error_unittest",
    "client:tls_cert_test",
    "client:tls_configuration_test",
    "client:tls_context_test",
    "client:tls_key_test",
    "client:tls_socket_branch_test",
    "client:tls_socket_unilateral_connection",
    "client:two_way_tls_socket_certchain_unittest",
    "client:two_way_tls_socket_unittest",
  ]
}
